--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,11 @@ maintainers = [
     { name = "Dr. Data Scientisimy", email = "example@example.com" },
 ]
 license = { text = "MIT" }
-dependencies = ["ocelescope"]
-requires-python = ">=3.12"
+dependencies = ["ocelescope~=0.1.3"]
+requires-python = ">=3.13"
 
 [dependency-groups]
 dev = ["black>=25.1.0", "pre-commit>=4.2.0", "ruff>=0.12.7"]
-
-
-[tool.uv.sources]
-ocelescope = { git = "https://github.com/rwth-pads/ocelescope.git", subdirectory = "src/ocelescope" }
 
 [tool.ty]
 # All rules are enabled as "error" by default; no need to specify unless overriding.
